Add escelation tiers (#211)
